Test/test_log.txt
[httpx-INFO]-[16:03:26] HTTP Request: POST http://10.224.28.80:3000/v1/chat/completions "HTTP/1.1 200 OK"
[ghostcoder.graph.retriever-INFO]-[16:05:30] ============retriever============
Starting retriever subagent...

[ghostcoder.graph.retriever-INFO]-[16:05:30] Initializing retrievers...
[ghostcoder.graph.retriever-ERROR]-[16:05:30] Get exception when adding vdb:
Traceback (most recent call last):
  File "/home/xinqi/BIA-Ghostcoder/ghostcoder/graph/retriever.py", line 87, in create_retriever_agent
    retriever =  setup_vdbs(db['name'])
                 ^^^^^^^^^^^^^^^^^^^^^^
TypeError: setup_vdbs() missing 1 required positional argument: 'emb_model'
[ghostcoder.graph.filemanager-INFO]-[16:05:30] ============file manager============
Starting filemanager subagent...

[ghostcoder.graph.filemanager-INFO]-[16:05:30] Creating file paths...
[ghostcoder.graph.filemanager-INFO]-[16:05:30] Created work home path as/home/xinqi/BIA-Ghostcoder/Test/task_id_test000
[ghostcoder.graph.filemanager-INFO]-[16:05:30] ============file manager============
Starting filemanager subagent...

[ghostcoder.graph.filemanager-INFO]-[16:05:30] Creating file paths...
[ghostcoder.graph.filemanager-INFO]-[16:05:30] ============file manager============
Starting filemanager subagent...

[ghostcoder.graph.filemanager-INFO]-[16:05:30] Creating file paths...
